ecosystems/flipside-crypto/terraform/workspaces/terraform-aws-organization/components/compass/modules/network/private-route-tables.tf
/* Private Route Tables
*/
resource "aws_route_table" "private" {
  vpc_id = aws_vpc.compass_vpc.id
  tags = {
    "Name" = "${var.vpc_name}-${var.env}-private"
  }
}

# a
resource "aws_route_table_association" "private_a_subnet" {
  subnet_id      = aws_subnet.private_a.id
  route_table_id = aws_route_table.private.id
}

# b
resource "aws_route_table_association" "private_b_subnet" {
  subnet_id      = aws_subnet.private_b.id
  route_table_id = aws_route_table.private.id
}

# c
resource "aws_route_table_association" "private_c_subnet" {
  subnet_id      = aws_subnet.private_c.id
  route_table_id = aws_route_table.private.id
}

# d
resource "aws_route_table_association" "private_d_subnet" {
  subnet_id      = aws_subnet.private_d.id
  route_table_id = aws_route_table.private.id
}

# e
resource "aws_route_table_association" "private_e_subnet" {
  subnet_id      = aws_subnet.private_e.id
  route_table_id = aws_route_table.private.id
}
